--- a/VolleyScoreKeeper_middle/app/src/main/AndroidManifest.xml
+++ b/VolleyScoreKeeper_middle/app/src/main/AndroidManifest.xml
@@ -70,4 +70,6 @@
             android:value="@integer/google_play_services_version" />
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
