--- a/VolleyScoreKeeper_middle/app/src/main/AndroidManifest.xml
+++ b/VolleyScoreKeeper_middle/app/src/main/AndroidManifest.xml
@@ -71,4 +71,6 @@
             android:value="@integer/google_play_services_version" />
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-feature android:name="android.hardware.location.gps" />
 </manifest>
