--- a/VolleyScoreKeeper_middle/app/build.gradle
+++ b/VolleyScoreKeeper_middle/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     }
     compile 'com.google.android.gms:play-services-appindexing:9.0.0'
     compile 'com.pacioianu.david:ink-page-indicator:1.2.0'
+    compile 'com.github.nkzawa:socket.io-client:0.3.0'
 }
