--- a/VolleyScoreKeeper_middle/app/build.gradle
+++ b/VolleyScoreKeeper_middle/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-appindexing:9.0.0'
     compile 'com.pacioianu.david:ink-page-indicator:1.2.0'
     compile 'com.github.nkzawa:socket.io-client:0.3.0'
+    compile 'com.facebook.stetho:stetho:1.4.2'
 }
